@@ -1,0 +1,9 @@
+#ifndef EVENT_H
+#define EVENT_H
+
+class Event {
+    public:
+        Event() = default;
+};
+
+#endif
