@@ -4,6 +4,8 @@
 #include "../ECS/ECS.h"
 #include "../Components/TransformComponent.h"
 #include "../Components/BoxColliderComponent.h"
+#include "../EventBus/EventBus.h"
+#include "../Events/CollisionEvent.h"
 
 class CollisionSystem: public System {
     public:
@@ -12,7 +14,7 @@ class CollisionSystem: public System {
             RequireComponent<BoxColliderComponent>();
         }
 
-        void Update() {
+        void Update(std::unique_ptr<EventBus>& eventBus) {
             auto entities = GetSystemEntities();
 
             // Loop all the system that the system is interested in
@@ -48,7 +50,7 @@ class CollisionSystem: public System {
                     if (collisionHappened) {
                         Logger::Log("Entity " + std::to_string(a.GetId()) + " is colliding with entity " + std::to_string(b.GetId()));
 
-                        // TODO: emit an event
+                        eventBus->EmitEvent<CollisionEvent>(a, b);
                     }
                 }
             } 
