@@ -1,3 +1,8 @@
+v18
+ # Course section 17: Event System
+    + Added an event system using the publisher-subscriber design pattern
+    (section completed)
+
 v17
  # Course section 16: Killing Entities
     + Implemented functionality to remove entities
